--- a/eda.ipynb
+++ b/eda.ipynb
@@ -16,6 +16,15 @@
    "source": [
     "print('hello world!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#analysis branch 생성 후 변경사항"
+   ]
   }
  ],
  "metadata": {
